--- a/src/app/views/mains/home/home.component.scss
+++ b/src/app/views/mains/home/home.component.scss
@@ -3,7 +3,6 @@
     padding: 50px;
     margin: 0 auto;
     text-align: center;
-    height: 100%;
     .add-post{
         color:black;
     }
